samples/_failures_safe/1761298013_779eda_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d838cbfa.c: In function ‘tokenize’:
./samples/SAFE/__tmp_d838cbfa.c:158:9: error: expected declaration or statement at end of input
  158 |         }
      |         ^
./samples/SAFE/__tmp_d838cbfa.c:158:9: error: expected declaration or statement at end of input
